==> micropython/micropython/ports/wch/bsp/src/ch32v30x_dac.c <==
#include "ch32v30x_dac.h"
#include "ch32v30x_rcc.h"
#define CTLR_CLEAR_MASK    ((uint32_t)0x00000FFE)
#define DUAL_SWTR_SET      ((uint32_t)0x00000003)
#define DUAL_SWTR_RESET    ((uint32_t)0xFFFFFFFC)
#define DHR12R1_OFFSET     ((uint32_t)0x00000008)
#define DHR12R2_OFFSET     ((uint32_t)0x00000014)
#define DHR12RD_OFFSET     ((uint32_t)0x00000020)
#define DOR_OFFSET         ((uint32_t)0x0000002C)

void DAC_Init(uint32_t DAC_Channel, DAC_InitTypeDef *DAC_InitStruct)
{
    uint32_t tmpreg1 = 0, tmpreg2 = 0;

    tmpreg1 = DAC->CTLR;
    tmpreg1 &= ~(CTLR_CLEAR_MASK << DAC_Channel);
    tmpreg2 = (DAC_InitStruct->DAC_Trigger | DAC_InitStruct->DAC_WaveGeneration |
               DAC_InitStruct->DAC_LFSRUnmask_TriangleAmplitude | DAC_InitStruct->DAC_OutputBuffer);
    tmpreg1 |= tmpreg2 << DAC_Channel;
    DAC->CTLR = tmpreg1;
}

void DAC_Cmd(uint32_t DAC_Channel, FunctionalState NewState)
{
    if(NewState != DISABLE)
    {
        DAC->CTLR |= (DAC_EN1 << DAC_Channel);
    }
    else
    {
        DAC->CTLR &= ~(DAC_EN1 << DAC_Channel);
    }
}

void DAC_DMACmd(uint32_t DAC_Channel, FunctionalState NewState)
{
    if(NewState != DISABLE)
    {
        DAC->CTLR |= (DAC_DMAEN1 << DAC_Channel);
    }
    else
    {
        DAC->CTLR &= ~(DAC_DMAEN1 << DAC_Channel);
    }
}

void DAC_SoftwareTriggerCmd(uint32_t DAC_Channel, FunctionalState NewState)
{
    if(NewState != DISABLE)
    {
        DAC->SWTR |= (uint32_t)DAC_SWTRIG1 << (DAC_Channel >> 4);
    }
    else
    {
        DAC->SWTR &= ~((uint32_t)DAC_SWTRIG1 << (DAC_Channel >> 4));
    }
}

void DAC_DualSoftwareTriggerCmd(FunctionalState NewState)
{
    if(NewState != DISABLE)
    {
        DAC->SWTR |= DUAL_SWTR_SET;
    }
    else
    {
        DAC->SWTR &= DUAL_SWTR_RESET;
    }
}
